# goodvibesapp

./: LICENSE  README.md  meson.build
data/: Application.css  com.github.coralynnmay.goodvibes-app.desktop.in.in  com.github.coralynnmay.goodvibes-app.gschema.xml  com.github.coralynnmay.goodvibes.appdata.xml.in  com.github.coralynnmay.goodvibes.desktop.in.in  com.github.coralynnmay.goodvibes_app.appdata.xml.in  com.github.coralynnmay.goodvibes_app.desktop.in.in  com.github.coralynnmay.goodvibes_app.gschema.xml  com.github.coralynnmay.goodvibesapp.appdata.xml.in  com.github.coralynnmay.goodvibesapp.desktop.in.in  com.github.coralynnmay.goodvibesapp.gschema.xml  global.goodvibes.goodvibes.appdata.xml.in  global.goodvibes.goodvibes.desktop.in.in  global.goodvibes.goodvibes.gresource.xml  global.goodvibes.goodvibes.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
po/extra/: POTFILES
src/: Application.vala  MainWindow.vala  meson.build
src/Services/: Server.vala  Settings.vala
src/Widgets/: GoodVibeSender.vala  GoodVibesReceiver.vala  StackHeaderBar.vala
